<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/none"
        android:textSize="20sp"
        android:background="@color/greay"
        android:gravity="bottom|end" />

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/zero"
        android:textSize="50sp"
        android:gravity="bottom|end" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="12dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/multiple"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="operation"
            android:text="@string/multiple" />

        <Button
            android:id="@+id/divide"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="operation"
            android:text="@string/divide" />

        <Button
            android:id="@+id/delete"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/clean"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cleaner"
            android:text="@string/clean" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="valueNumbers"
            android:text="@string/one"/>

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="valueNumbers"
            android:text="@string/two"/>

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="valueNumbers"
            android:text="@string/three"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="operation"
            android:text="@string/plus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="valueNumbers"
            android:text="@string/four"/>

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="valueNumbers"
            android:text="@string/five"/>

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="valueNumbers"
            android:text="@string/six"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="operation"
            android:text="@string/minus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="valueNumbers"
            android:text="@string/seven"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="valueNumbers"
            android:text="@string/eight"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="valueNumbers"
            android:text="@string/nine"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:onClick="calculator"
            android:text="@string/result"/>

    </LinearLayout>

</LinearLayout>